Added contacts
